MyDemoOrg/force-app/main/default/objects/Set_time__c/Set_time__c.object-meta.xml
<CustomObject>
    <label>Set time</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Set time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Set times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>