MyDemoOrg/force-app/main/default/objects/Set_time__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <label>Band</label>
    <referenceTo>Band__c</referenceTo>
    <relationshipLabel>Set times</relationshipLabel>
    <relationshipName>Set_times</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>