MyDemoOrg/force-app/main/default/objects/Set_time__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <referenceTo>Stage__c</referenceTo>
    <relationshipLabel>Set times</relationshipLabel>
    <relationshipName>Set_times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>